# nix-cpio-generator

./: Cargo.toml  build.rs  flake.nix
.github/workflows/: rust.yml
examples/: makecpio.rs
src/: cpio.rs  cpio_cache.rs  cpio_lru_cache.rs  cpio_maker.rs  error.rs  files.rs  lib.rs  nix.rs  opened_cpio.rs  stream.rs
